<resources>
    <string name="app_name">MyFirstHomeWork</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
    <string name="four">Four</string>
    <string name="five">Five</string>
    <string name="analog_clock">Analog Clock</string>
    <string name="digital_clock">Digital Clock</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="button1">Button1</string>
    <string name="button2">Button2</string>
    <string name="turn_off">Turn Off</string>
    <string name="turn_on">Turn On</string>
    <string name="flashlight_off">Flashlight OFF</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="telephone">Telephone</string>
    <string name="read">Read</string>
    <string name="create">Create</string>
    <string name="clear">Clear</string>
    <string name="delete_record">Удалить</string>
    <string name="notification_title">Push here to switch off</string>
    <string name="toggle_button">Toggle Button</string>
</resources>
